--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>web-state</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
-  <body></body>
+  <body>
+    <div></div>
+  </body>
 </html>
