--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <section>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </section>
   </body>
 </html>
