--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <section>
-      <div></div>
-      <div></div>
-      <div></div>
+      <div>
+        <div></div>
+      </div>
       <div></div>
     </section>
   </body>
