--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <section>
       <div>
         <div></div>
-        <div></div>
+        <div>
+          <div></div>
+        </div>
       </div>
       <div></div>
     </section>
