--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <section>
+      <!-- current visitors and page views container -->
       <div>
         <div></div>
         <div>
