--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <div></div>
         </div>
       </div>
+      <!-- Launch LiveView container -->
       <div></div>
     </section>
   </body>
