--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <section>
       <!-- current visitors and page views container -->
-      <div>
+      <div class="visitors-page-container">
         <div></div>
         <div>
           <div></div>
