--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <!-- Launch LiveView container -->
-      <div class=""></div>
+      <div class="Launch-container"></div>
     </section>
   </body>
 </html>
