--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <section>
       <!-- current visitors and page views container -->
       <div class="visitors-page-container">
-        <div></div>
+        <div>
+          <h1></h1>
+        </div>
         <div>
           <div></div>
           <div></div>
