--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="visitors-page-container">
         <div>
           <h1>205</h1>
-          <p></p>
+          <p>current visitors</p>
         </div>
         <div>
           <div></div>
