--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section>
       <!-- current visitors and page views container -->
       <div class="visitors-page-container">
-        <div class="">
+        <div class="visitors-container">
           <h1>205</h1>
           <p>current visitors</p>
         </div>
