--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <h1>205</h1>
           <p>current visitors</p>
         </div>
-        <div>
+        <div class="">
           <div></div>
           <div></div>
         </div>
