--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
           <p>current visitors</p>
         </div>
         <div class="page-container">
-          <div></div>
+          <div>
+            <div></div>
+          </div>
           <div></div>
         </div>
       </div>
