--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <div class="page-container">
           <div>
             <img src="./pages.svg" alt="pages img" />
-            <div></div>
+            <div>
+              <h2></h2>
+            </div>
           </div>
           <div></div>
         </div>
