--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="./pages.svg" alt="pages img" />
             <div>
               <h2>530,001</h2>
-              <p></p>
+              <p>page views</p>
             </div>
           </div>
           <div></div>
