--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <p>current visitors</p>
         </div>
         <div class="page-container">
-          <div>
+          <div class="page">
             <img src="./pages.svg" alt="pages img" />
             <div>
               <h2>530,001</h2>
