--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
               <p>page views</p>
             </div>
           </div>
-          <div></div>
+          <div>
+            <img src="./person.svg" alt="person img" />
+          </div>
         </div>
       </div>
       <!-- Launch LiveView container -->
