--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <div>
             <img src="./person.svg" alt="person img" />
             <h2>80,488</h2>
+            <p>UNIQUE VISITORS</p>
           </div>
         </div>
       </div>
