--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <p>page views</p>
             </div>
           </div>
-          <div>
+          <div class="UNIQUE">
             <img src="./person.svg" alt="person img" />
             <h2>80,488</h2>
             <p>UNIQUE VISITORS</p>
