--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         </div>
       </div>
       <!-- Launch LiveView container -->
-      <div class="Launch-container"></div>
+      <div class="Launch-container">
+        <a href="#">Launch LiveView</a>
+      </div>
     </section>
   </body>
 </html>
