--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
       <!-- Launch LiveView container -->
       <div class="Launch-container">
         <a href="#">Launch LiveView</a>
+        <p>
+          Note: You will need the latest version of Google Chrome for optimal
+          performance.
+        </p>
       </div>
     </section>
   </body>
