--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <h1>205</h1>
           <p>current visitors</p>
         </div>
+        <!-- page container -->
         <div class="page-container">
           <div class="page">
             <img src="./pages.svg" alt="pages img" />
