--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
           <h1>205</h1>
           <p>current visitors</p>
         </div>
-        <!-- page container -->
-        <div class="page-container">
+        <!-- page and unique container -->
+        <div class="page-unique-container">
+          <!--  -->
           <div class="page">
             <img src="./pages.svg" alt="pages img" />
             <div>
