--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <!-- page and unique container -->
         <div class="page-unique-container">
-          <!--  -->
+          <!-- page container -->
           <div class="page">
             <img src="./pages.svg" alt="pages img" />
             <div>
