--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
               <p>page views</p>
             </div>
           </div>
+          <!-- unique container -->
           <div class="UNIQUE">
             <img src="./person.svg" alt="person img" />
             <h2>80,488</h2>
@@ -33,7 +34,7 @@
         </div>
       </div>
       <!-- Launch LiveView container -->
-      <div class="Launch-container">
+      <div class="Launch-liveView-container">
         <a href="#">Launch LiveView</a>
         <p>
           Note: You will need the latest version of Google Chrome for optimal
