--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
           </div>
           <!-- unique container -->
-          <div class="UNIQUE">
+          <div class="unique">
             <img src="./person.svg" alt="person img" />
             <h2>80,488</h2>
             <p>UNIQUE VISITORS</p>
