--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
           <!-- unique container -->
           <div class="unique">
             <img src="./person.svg" alt="person img" />
-            <h2>80,488</h2>
-            <p>UNIQUE VISITORS</p>
+            <div>
+              <h2>80,488</h2>
+              <p>UNIQUE VISITORS</p>
+            </div>
           </div>
         </div>
       </div>
