adding background-color

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <!-- Launch LiveView container -->
       <div class="Launch-liveView-container">
-        <a href="#">Launch LiveView</a>
+        <!-- <button>Launch LiveView</button> -->
         <p>
           Note: You will need the latest version of Google Chrome for optimal
           performance.
