--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
       <div class="Launch-liveView-container">
         <button>Launch LiveView</button>
         <p>
-          Note: You will need the latest version of Google Chrome for optimal
-          performance.
+          <span>
+            Note: You will need the latest version of Google Chrome for optimal
+            performance.
+          </span>
         </p>
       </div>
     </section>
