--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
       <div class="Launch-liveView-container">
         <button>Launch LiveView</button>
         <p>
-          <span>
-            Note: You will need the latest version of Google Chrome for optimal
-            performance.
-          </span>
+          <strong> Note: </strong>
+          You will need the latest version of Google Chrome for optimal
+          performance.
         </p>
       </div>
     </section>
